# strerror

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
info/: Makefile.am  author.h2m  genh2m.sh  strerror.1  strerror.ex
m4/: sxe-compiler.m4
src/: Makefile.am  errno-lit.gperf.in  strerrno.gperf.in  strerror-clo.ggo  strerror.c  strerror.yuck  version.c.in  version.h
